2008-07-20  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #200147
	Added basic Template support

	* em-composer-utils.c (edit_message), (em_utils_edit_message): Modified 
	to suit it better for plugins to use it. And added support for template 
	placeholders to be replaced in the messages.
	* em-composer-utils.h:
	* em-folder-tree.c (is_special_local_folder):
	* em-folder-utils.c (emfu_is_special_local_folder):
	* em-folder-view.c (em_folder_view_open_selected):
	* em-utils.c (em_utils_folder_is_templates):
	* em-utils.h:
	* mail-component.c:
	* mail-component.h:

2008-07-16  Sankar P  <psankar@novell.com>

	Pushing disk summary changes from the madagascar branch

	* em-folder-browser.c (get_view_query):
	* em-folder-view.c (emfv_enable_menus):
	* mail-ops.c (refresh_folder_exec):
	* message-list.c (regen_list_exec):

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #269152

	* em-format-quote.c: (emfq_format_header):
	* em-format-html.c: (efh_format_headers):
	Use X-MimeOLE as Mailer header when there's nothing better available.

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #228725

	* message-list.c: (mail_regen_list): Update empty message on regen.

2008-07-09  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #207802 (Patch suggested by Veerapuram Varadhan.)

	* message-list.c: (struct search_child_struct), (search_child_cb),
	(is_tree_widget_children), (ml_tree_drag_motion): Do not allow drop
	messages to the same message list as is the source. Also do not
	allow drop over message list if it doesn't have set a folder.

2008-07-03  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #541365

	* message-list.c: (message_list_get_uids), (message_list_get_selected):
	Do not call 'camel_folder_sort_uids' when we do not have folder or uid.

2008-07-02  Jeffrey Stedfast  <fejj@novell.com>

	Sort the uids so that moving/copying messages preserves mailbox
	ordering rather than jumbled randomness.
